pycsdr (0.18.23) bullseye jammy; urgency=low

  * Added NAVTEX decoder (header/footer detection).
  * Cleaned up and greatly improved CW decoder.

 -- Marat Fayzullin <luarvique@gmail.com>  Mon, 15 Apr 2024 16:12:00 +0000

pycsdr (0.18.22) bullseye jammy; urgency=low

  * Improved preamble detection in CCIR493.
  * Relaxed DSC FORMAT/EOS field requirements.
  * Clarified DSC error positions.
  * Slightly improved SITOR-B.

 -- Marat Fayzullin <luarvique@gmail.com>  Mon, 25 Mar 2024 16:12:00 +0000

pycsdr (0.18.21) bullseye jammy; urgency=low

  * Added doNotKill option to ExecModule.
  * Added more complex CCIR493 bit recovery code.
  * Made CCIR493 resync error count configurable.
  * Made CCIR493 output EMPTY symbols for errors.
  * Improved DSC preamble detection.
  * Improved SITOR-B decoder, based on CCIR493.

 -- Marat Fayzullin <luarvique@gmail.com>  Mon, 18 Mar 2024 16:12:00 +0000

pycsdr (0.18.20) bullseye jammy; urgency=low

  * Synchronizing with csdr 0.18.20.
  * Improved CCIR493 by allowing more errors before resync.
  * Added output of broken DSC messages, for debugging.
  * Added timestamps to DSC messages.
  * Now skipping leading zeros in DSC frequencies.
  * Slightly optimized ExecModule.

 -- Marat Fayzullin <luarvique@gmail.com>  Mon, 11 Mar 2024 16:12:00 +0000

pycsdr (0.18.19) bullseye jammy; urgency=low

  * Finished initial CCIR493 / DSC decoder.
  * Added reset() method to the CW decoder.

 -- Marat Fayzullin <luarvique@gmail.com>  Mon, 4 Mar 2024 16:12:00 +0000

pycsdr (0.18.18) bullseye jammy; urgency=low

  * Merged changes from Jakob Ketterl's development branch.
  * [jketterl] Synchronized with latest CSDR changes.
  * [jketterl] Fixes to reference counting.

 -- Marat Fayzullin <luarvique@gmail.com>  Mon, 5 Feb 2024 16:12:00 +0000

pycsdr (0.18.17) bullseye jammy; urgency=low

  * Synchronizing with csdr 0.18.17.
  * Added experimental CCIR493 and DSC decoders.
  * Refactored and improved CW, SITOR-B, and CCIR476 decoders.