@@ -1,3 +1,9 @@
+pycsdr (0.18.24) bullseye jammy; urgency=low
+
+  * Added procSize parameter to ExecModule.
+
+ -- Marat Fayzullin <luarvique@gmail.com>  Mon, 6 May 2024 16:12:00 +0000
+
 pycsdr (0.18.23) bullseye jammy; urgency=low
 
   * Added NAVTEX decoder (header/footer detection).
